--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,12 @@
       "https://cdn.glitch.com/1b42d7fe-bda8-4af8-a6c8-eff0cea9e08a%2Fstartup.png?1494946700268"
   },
   "author": "Charlie Jackson",
-  "capabilities": ["callback", "card-buttons", "attachment-sections"],
+  "capabilities": [
+    "callback",
+    "card-buttons",
+    "attachment-sections",
+    "card-badges"
+  ],
   "connectors": {
     "iframe": {
       "url": "https://cajacko.github.io/trello-timesheet/index.html"
