--- a/package.json
+++ b/package.json
@@ -1,9 +1,33 @@
 {
   "name": "timesheet",
   "version": "0.1.0",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "description": "Timesheet for Charlie Jackson",
   "main": "index.js",
   "repository": "https://github.com/cajacko/trello-timesheet.git",
   "author": "Charlie Jackson",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "firebase": "^4.9.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.1.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-chunk-hash": "^0.5.0",
+    "webpack-dev-server": "^2.9.7"
+  }
 }
