--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     [
       "module-resolver",
       {
-        "root": ["./src"],
+        "root": ["./"],
         "extensions": [".js", ".jsx"]
       }
     ]
