--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-chunk-hash": "^0.5.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0"
   }
 }
