--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
     "file-loader": "^1.1.6",
     "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.4.0",
+    "redux-saga": "^0.16.0",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-chunk-hash": "^0.5.0",
-    "webpack-dev-server": "^2.9.7",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-fa": "^5.0.0"
-  }
+    "webpack-dev-server": "^2.9.7"
+  },
+  "dependencies": {}
 }
