--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 REACT_APP_TIMELY_APPLICATION_ID=odughoifh
 REACT_APP_TIMELY_APPLICATION_SECRET=dojpojdpjfp
+REACT_APP_PRODUCTION_URL=https://firebase-project-id.firebaseapp.com
